--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -8,6 +7,113 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<!-- gekürzt für Übersichtlichkeit -->
+  <select id="langSelector" onchange="setLanguage(this.value)">
+    <option value="de">Deutsch</option>
+    <option value="en">English</option>
+    <option value="es">Español</option>
+    <option value="it">Italiano</option>
+  </select>
+
+  <h1 data-key="headline">Was möchtest du teilen?</h1>
+
+  <form id="confessionForm">
+    <label for="type" data-key="typeLabel">Ich möchte:</label>
+    <select id="type" name="type">
+      <option value="confession" data-key="opt1">Etwas beichten</option>
+      <option value="help" data-key="opt2">Um Hilfe bitten</option>
+      <option value="give" data-key="opt3">Unterstützung geben</option>
+    </select>
+
+    <label for="message" data-key="msgLabel">Deine Nachricht:</label>
+    <textarea id="message" name="message" rows="6" required></textarea>
+
+    <label for="paypal" data-key="paypalLabel">(Optional) Deine PayPal-Adresse, falls du Hilfe erhoffst:</label>
+    <input type="email" id="paypal" name="paypal" placeholder="beispiel@mail.com" />
+
+    <label for="code" data-key="codeLabel">Persönlicher Code oder Passwort:</label>
+    <input type="text" id="code" name="code" required />
+
+    <label>
+      <input type="checkbox" id="allowShare" name="allowShare" />
+      <span data-key="shareConsent">Ich bin grundsätzlich einverstanden, dass meine Geschichte anonymisiert veröffentlicht werden darf.</span>
+    </label>
+
+    <button type="submit" data-key="submit">Absenden</button>
+  </form>
+
+  <script>
+    const translations = {
+      de: {
+        headline: "Was möchtest du teilen?",
+        typeLabel: "Ich möchte:",
+        opt1: "Etwas beichten",
+        opt2: "Um Hilfe bitten",
+        opt3: "Unterstützung geben",
+        msgLabel: "Deine Nachricht:",
+        paypalLabel: "(Optional) Deine PayPal-Adresse, falls du Hilfe erhoffst:",
+        codeLabel: "Persönlicher Code oder Passwort:",
+        shareConsent: "Ich bin grundsätzlich einverstanden, dass meine Geschichte anonymisiert veröffentlicht werden darf.",
+        submit: "Absenden"
+      },
+      en: {
+        headline: "What would you like to share?",
+        typeLabel: "I want to:",
+        opt1: "Confess something",
+        opt2: "Ask for help",
+        opt3: "Give support",
+        msgLabel: "Your message:",
+        paypalLabel: "(Optional) Your PayPal address, if you hope for help:",
+        codeLabel: "Personal code or password:",
+        shareConsent: "I agree that my message may be shared anonymously.",
+        submit: "Submit"
+      },
+      es: {
+        headline: "¿Qué quieres compartir?",
+        typeLabel: "Quiero:",
+        opt1: "Confesar algo",
+        opt2: "Pedir ayuda",
+        opt3: "Dar apoyo",
+        msgLabel: "Tu mensaje:",
+        paypalLabel: "(Opcional) Tu dirección de PayPal si esperas ayuda:",
+        codeLabel: "Código personal o contraseña:",
+        shareConsent: "Acepto que mi historia pueda compartirse de forma anónima.",
+        submit: "Enviar"
+      },
+      it: {
+        headline: "Cosa vuoi condividere?",
+        typeLabel: "Vorrei:",
+        opt1: "Confessare qualcosa",
+        opt2: "Chiedere aiuto",
+        opt3: "Dare supporto",
+        msgLabel: "Il tuo messaggio:",
+        paypalLabel: "(Facoltativo) Il tuo indirizzo PayPal, se desideri aiuto:",
+        codeLabel: "Codice personale o password:",
+        shareConsent: "Accetto che la mia storia possa essere condivisa in forma anonima.",
+        submit: "Invia"
+      }
+    };
+
+    function setLanguage(lang) {
+      document.querySelectorAll('[data-key]').forEach(el => {
+        const key = el.getAttribute('data-key');
+        if (translations[lang] && translations[lang][key]) {
+          el.innerHTML = translations[lang][key];
+        }
+      });
+      const opts = document.querySelectorAll('option');
+      opts.forEach(opt => {
+        const key = opt.getAttribute('data-key');
+        if (translations[lang] && translations[lang][key]) {
+          opt.textContent = translations[lang][key];
+        }
+      });
+    }
+
+    const browserLang = navigator.language.slice(0, 2);
+    const defaultLang = ['de', 'en', 'es', 'it'].includes(browserLang) ? browserLang : 'de';
+    document.getElementById('langSelector').value = defaultLang;
+    setLanguage(defaultLang);
+  </script>
 </body>
 </html>
+
