--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
     <label for="code" data-key="codeLabel">Persönlicher Code oder Passwort:</label>
     <input type="text" id="code" name="code" required />
+    <small data-key="codeHint">
+      Dieser Code wird verwendet, um deine Nachricht später wiederzufinden und eine Antwort zuordnen zu können. Bitte notiere ihn dir gut – er ist anonym und nicht wiederherstellbar.
+    </small>
 
     <label>
       <input type="checkbox" id="allowShare" name="allowShare" />
@@ -52,6 +55,7 @@
         msgLabel: "Deine Nachricht:",
         paypalLabel: "(Optional) Deine PayPal-Adresse, falls du Hilfe erhoffst:",
         codeLabel: "Persönlicher Code oder Passwort:",
+        codeHint: "Dieser Code wird verwendet, um deine Nachricht später wiederzufinden und eine Antwort zuordnen zu können. Bitte notiere ihn dir gut – er ist anonym und nicht wiederherstellbar.",
         shareConsent: "Ich bin grundsätzlich einverstanden, dass meine Geschichte anonymisiert veröffentlicht werden darf.",
         submit: "Absenden"
       },
@@ -64,6 +68,7 @@
         msgLabel: "Your message:",
         paypalLabel: "(Optional) Your PayPal address, if you hope for help:",
         codeLabel: "Personal code or password:",
+        codeHint: "This code helps you retrieve your message and receive a response. Please write it down – it’s anonymous and cannot be recovered later.",
         shareConsent: "I agree that my message may be shared anonymously.",
         submit: "Submit"
       },
@@ -76,6 +81,7 @@
         msgLabel: "Tu mensaje:",
         paypalLabel: "(Opcional) Tu dirección de PayPal si esperas ayuda:",
         codeLabel: "Código personal o contraseña:",
+        codeHint: "Este código te permite recuperar tu mensaje y recibir una respuesta. Anótalo bien: es anónimo y no se puede recuperar.",
         shareConsent: "Acepto que mi historia pueda compartirse de forma anónima.",
         submit: "Enviar"
       },
@@ -88,6 +94,7 @@
         msgLabel: "Il tuo messaggio:",
         paypalLabel: "(Facoltativo) Il tuo indirizzo PayPal, se desideri aiuto:",
         codeLabel: "Codice personale o password:",
+        codeHint: "Questo codice ti consente di recuperare il tuo messaggio e ricevere una risposta. Salvalo con cura: è anonimo e non recuperabile.",
         shareConsent: "Accetto che la mia storia possa essere condivisa in forma anonima.",
         submit: "Invia"
       }
