--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <nav style="margin-bottom: 2rem;">
+    <a href="/" style="margin-right: 1rem;">Start</a>
+    <a href="/erklaerung" style="margin-right: 1rem;">Erklärung</a>
+    <a href="/antwort" style="margin-right: 1rem;">Antwort anzeigen</a>
+    <a href="/berichte">Erfahrungsberichte</a>
+  </nav>
   <select id="langSelector" onchange="setLanguage(this.value)">
     <option value="de">Deutsch</option>
     <option value="en">English</option>
@@ -118,9 +124,15 @@
 
     const browserLang = navigator.language.slice(0, 2);
     const defaultLang = ['de', 'en', 'es', 'it'].includes(browserLang) ? browserLang : 'de';
-    document.getElementById('langSelector').value = defaultLang;
-    setLanguage(defaultLang);
+    const savedLang = localStorage.getItem("lightnhopeLang") || defaultLang;
+    document.getElementById('langSelector').value = savedLang;
+    setLanguage(savedLang);
+
+    document.getElementById('langSelector').addEventListener("change", (e) => {
+      localStorage.setItem("lightnhopeLang", e.target.value);
+    });
   </script>
 </body>
 </html>
+
 
