--- a/index.html
+++ b/index.html
@@ -36,12 +36,6 @@
     <label for="paypal" data-key="paypalLabel">(Optional) Deine PayPal-Adresse, falls du Hilfe erhoffst:</label>
     <input type="email" id="paypal" name="paypal" placeholder="beispiel@mail.com" />
 
-    <label for="code" data-key="codeLabel">Persönlicher Code oder Passwort:</label>
-    <input type="text" id="code" name="code" required />
-    <small data-key="codeHint">
-      Dieser Code wird verwendet, um deine Nachricht später wiederzufinden und eine Antwort zuordnen zu können. Bitte notiere ihn dir gut – er ist anonym und nicht wiederherstellbar.
-    </small>
-
     <label>
       <input type="checkbox" id="allowShare" name="allowShare" />
       <span data-key="shareConsent">Ich bin grundsätzlich einverstanden, dass meine Geschichte anonymisiert veröffentlicht werden darf.</span>
@@ -50,7 +44,34 @@
     <button type="submit" data-key="submit">Absenden</button>
   </form>
 
+  <div id="confirmation" style="margin-top:2rem; display:none;"></div>
+
   <script>
+    const endpoint = "https://script.google.com/macros/s/AKfycbxSZ707mzQFeO_cqr0b0WpKju3yUxR-JwUaYEDUK0FdvThkmhosMDcIHBXs8-Rh7lcmQA/exec";
+
+    document.getElementById("confessionForm").addEventListener("submit", async function(e) {
+      e.preventDefault();
+
+      const data = {
+        type: document.getElementById("type").value,
+        message: document.getElementById("message").value,
+        paypal: document.getElementById("paypal").value,
+        allowShare: document.getElementById("allowShare").checked ? "yes" : "no"
+      };
+
+      const res = await fetch(endpoint, {
+        method: "POST",
+        body: JSON.stringify(data),
+        headers: { "Content-Type": "application/json" }
+      });
+
+      const result = await res.json();
+      const confirmation = document.getElementById("confirmation");
+      confirmation.style.display = "block";
+      confirmation.innerHTML = `<strong>Dein Code lautet:</strong> <code>${result.code}</code><br>Bitte gut notieren!`;
+      document.getElementById("confessionForm").reset();
+    });
+
     const translations = {
       de: {
         headline: "Was möchtest du teilen?",
@@ -60,8 +81,6 @@
         opt3: "Unterstützung geben",
         msgLabel: "Deine Nachricht:",
         paypalLabel: "(Optional) Deine PayPal-Adresse, falls du Hilfe erhoffst:",
-        codeLabel: "Persönlicher Code oder Passwort:",
-        codeHint: "Dieser Code wird verwendet, um deine Nachricht später wiederzufinden und eine Antwort zuordnen zu können. Bitte notiere ihn dir gut – er ist anonym und nicht wiederherstellbar.",
         shareConsent: "Ich bin grundsätzlich einverstanden, dass meine Geschichte anonymisiert veröffentlicht werden darf.",
         submit: "Absenden"
       },
@@ -73,8 +92,6 @@
         opt3: "Give support",
         msgLabel: "Your message:",
         paypalLabel: "(Optional) Your PayPal address, if you hope for help:",
-        codeLabel: "Personal code or password:",
-        codeHint: "This code helps you retrieve your message and receive a response. Please write it down – it’s anonymous and cannot be recovered later.",
         shareConsent: "I agree that my message may be shared anonymously.",
         submit: "Submit"
       },
@@ -86,8 +103,6 @@
         opt3: "Dar apoyo",
         msgLabel: "Tu mensaje:",
         paypalLabel: "(Opcional) Tu dirección de PayPal si esperas ayuda:",
-        codeLabel: "Código personal o contraseña:",
-        codeHint: "Este código te permite recuperar tu mensaje y recibir una respuesta. Anótalo bien: es anónimo y no se puede recuperar.",
         shareConsent: "Acepto que mi historia pueda compartirse de forma anónima.",
         submit: "Enviar"
       },
@@ -99,12 +114,19 @@
         opt3: "Dare supporto",
         msgLabel: "Il tuo messaggio:",
         paypalLabel: "(Facoltativo) Il tuo indirizzo PayPal, se desideri aiuto:",
-        codeLabel: "Codice personale o password:",
-        codeHint: "Questo codice ti consente di recuperare il tuo messaggio e ricevere una risposta. Salvalo con cura: è anonimo e non recuperabile.",
         shareConsent: "Accetto che la mia storia possa essere condivisa in forma anonima.",
         submit: "Invia"
       }
     };
+
+    const browserLang = navigator.language.slice(0, 2);
+    const defaultLang = ['de', 'en', 'es', 'it'].includes(browserLang) ? browserLang : 'de';
+    const savedLang = localStorage.getItem("lightnhopeLang") || defaultLang;
+    document.getElementById('langSelector').value = savedLang;
+    setLanguage(savedLang);
+    document.getElementById('langSelector').addEventListener("change", (e) => {
+      localStorage.setItem("lightnhopeLang", e.target.value);
+    });
 
     function setLanguage(lang) {
       document.querySelectorAll('[data-key]').forEach(el => {
@@ -121,16 +143,6 @@
         }
       });
     }
-
-    const browserLang = navigator.language.slice(0, 2);
-    const defaultLang = ['de', 'en', 'es', 'it'].includes(browserLang) ? browserLang : 'de';
-    const savedLang = localStorage.getItem("lightnhopeLang") || defaultLang;
-    document.getElementById('langSelector').value = savedLang;
-    setLanguage(savedLang);
-
-    document.getElementById('langSelector').addEventListener("change", (e) => {
-      localStorage.setItem("lightnhopeLang", e.target.value);
-    });
   </script>
 </body>
 </html>
