--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div id="confirmation" style="margin-top:2rem; display:none;"></div>
 
   <script>
-    const endpoint = "https://script.google.com/macros/s/AKfycbwF0jcrVgZHW3BjNTymC4FUt1-xpze8HD0Nv9gDmJldkkT8xAakMvr9Cp-Ib5rGEUjZfA/exec";
+    const endpoint = "/api/post-entry";
 
     document.getElementById("confessionForm").addEventListener("submit", async function(e) {
       e.preventDefault();
