--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Verborgene Stimme</title>
+  <title>Light & Hope</title>
   <style>
     body {
       font-family: sans-serif;
       background: #fdfcf8;
       padding: 2rem;
+    }
+    h1 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
     form {
       max-width: 600px;
@@ -49,7 +54,7 @@
   </style>
 </head>
 <body>
-
+  <h1>🌟 Light & Hope</h1>
   <div class="lang-select">
     <label for="lang">🌐 Sprache / Language:</label>
     <select id="lang">
@@ -198,3 +203,4 @@
   </script>
 </body>
 </html>
+
